# fesomadealli-ecommerce-api

./: .env.example  README.md  main.py  pyproject.toml
api/: routes.py
database/: crud.py  db_setup.py  models.py
scripts/: clean.py  insights.py  load_data.py
tests/: index_test.py
